# Algorithm-Engineering-Lab

./: README.md
Answers/: readme.md
Answers/01_Week/: CMakeLists.txt  pi_monte_carlo.cpp
Answers/02_Week/: CMakeLists.txt  pi_openmp_v1.cpp
Answers/03_Week/: 7th_exercise.py
Paper/: readme.md
Paper/graphics/algorithm/: the_algorithm.ods
Paper/graphics/graphs/: graphs.py  meassurement.csv  meassurement_partition.csv  meassurement_raw_data.txt  meassurement_select.csv  meassurement_sort.csv
Paper/graphics/vtune/: meassurement.txt
Project/: CMakeLists.txt  TEST_vs_gnu_parallel_and_correctness.cc  TEST_vs_time.cc  partition.hpp  ppartquick.hpp  readme.md  test.cc
Project/lib/: ppartquick.hpp
Project/test/: profiling.cc  test_with_gnu_parallel.cc
